k8s/manifests-aaf1a7/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-aaf1a7
  namespace: journee
  labels:
    app: journee-aaf1a7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-aaf1a7
  template:
    metadata:
      labels:
        app: journee-aaf1a7
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-aaf1a7
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
