k8s/manifests-aaf1a7/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-aaf1a7
  namespace: journee
spec:
  selector:
    app: journee-aaf1a7
  ports:
    - port: 80
      targetPort: 3000
